# main

./: README
development/cpp/projects/libjm/: CMakeLists.txt  README  Rakefile.rb  libjm.kdev4  rake_common.rb
development/cpp/projects/libjm/libjmdb/: CMakeLists.txt  config.h.in  jmdb_columninformation.cpp  jmdb_columninformation.h  jmdb_databasehandler.h  jmdb_databasehandlerfactory.cpp  jmdb_databasehandlerfactory.h  jmdb_field.cpp  jmdb_field.h  jmdb_mysqldatabasehandler.cpp  jmdb_mysqldatabasehandler.h  jmdb_preparedstatement.cpp  jmdb_preparedstatement.h  jmdb_resultrow.cpp  jmdb_resultrow.h  jmdb_resultset.h  jmdb_sqlitedatabasehandler.cpp  jmdb_sqlitedatabasehandler.h  jmdb_sqlitepreparedstatement.cpp  jmdb_sqlitepreparedstatement.h  jmdb_sqliteresultrow.cpp  jmdb_sqliteresultrow.h  jmdb_sqliteresultset.cpp  jmdb_sqliteresultset.h  main.cpp
development/cpp/projects/libjm/libjmdb/ruby/: README  Rakefile.rb  extconf.rb  jmdb.rb
development/cpp/projects/libjm/libjmdb/ruby/rakehelpers/: create_sqlite_testdb.rb
development/cpp/projects/libjm/libjmdb/ruby/swig/: jmdb.i  jmdb_columninformation.i  jmdb_databasehandler.i  jmdb_databasehandlerfactory.i  jmdb_field.i  jmdb_mysqldatabasehandler.i  jmdb_preparedstatement.i  jmdb_resultrow.i  jmdb_resultset.i  jmdb_sqlitedatabasehandler.i
development/cpp/projects/libjm/libjmdb/ruby/unit-tests/: 00_test_loading_extension.rb  01_test_string_field.rb  02_test_int_field.rb  03_test_real_field.rb  04_test_binary_data_field.rb  05_test_dbhfactory.rb  11_test_sqlite_connstr.rb  11_test_sqlitedbh.rb  12_test_sqlite_dbh.rb  21_test_mysql_connstr.rb  dbh_all_tests.rb  dbh_test_base.rb  dbh_test_columntypes.rb  dbh_test_execute.rb  dbh_test_helper.rb  dbh_test_prepared_statement.rb  dbh_test_select.rb  int_limits.rb  mysql_test_helper.rb  ts_all.rb
development/cpp/projects/libjm/libjmdb/ruby/unit-tests/fixtures/mysql/: configuration.yaml  mysql_test_database.sql
development/cpp/projects/libjm/libjmdb/ruby/unit-tests/fixtures/sqlite/: sqlite_test_database.sql  testdb.sqlite
development/cpp/projects/libjm/libjmutil/: CMakeLists.txt  jmutil_fileutils.cpp  jmutil_fileutils.h  jmutil_stringutils.cpp  jmutil_stringutils.h
development/cpp/projects/libjm/libjmutil/ruby/: .gitignore  (+3 more)
development/ruby/hacking-corner/kdev_dep_scanner/: README  Rakefile  cmake_parser.rb
development/ruby/hacking-corner/kdev_dep_scanner/unit-tests/: test_cmake_parser.rb  test_cmake_parser2.rb  tsAll.rb
development/ruby/projects/MovieMock/: Rakefile  directory_helper.rb  google_search_helper.rb  http_helper.rb  imdb_model_classes.rb  imdb_movie_builder.rb  imdb_search_helper.rb  imdb_tvshow_builder.rb  imdb_tvshow_store.rb  mm_cache.rb  movie_mock_url_disk_cache.rb  nokogiri_helper.rb  roman_numeral_helper.rb  scan_movies_directory.rb  url_disk_cache.rb  video_filename_parser.rb
development/ruby/projects/MovieMock/unit-tests/: tc_video_filename_parser.rb  tsAll.rb
(+31 files in other folders)
